successfully controlling the duration of the scroll

--- a/Pages/Asistencia.razor
+++ b/Pages/Asistencia.razor
@@ -462,7 +462,7 @@
 
     private async Task ScrollToElement()
     {
-        await JSRuntime.InvokeVoidAsync("scrollToElement", "targetElement");
+        await JSRuntime.InvokeVoidAsync("scrollToElement", "targetElement", "2000");
     }
 
 
