--- a/Pages/Asistencia.razor
+++ b/Pages/Asistencia.razor
@@ -34,7 +34,7 @@
             </AnimateOnScroll>
         </MudContainer>
 
-        <div id="targetElement" class="d-flex align-center justify-center mt-5 mb-5">
+        <div id="confirmationButton" class="d-flex align-center justify-center mt-5 mb-5">
             <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(0.6)">
                 <MudButton OnClick="ConfirmAttendance" StartIcon="@Icons.Material.Filled.RocketLaunch" EndIcon="@Icons.Material.Filled.RocketLaunch" Variant="Variant.Filled" Size="Size.Large" Color="Color.Secondary">CONFIRMO</MudButton>
             </AnimateOnScroll>
@@ -101,7 +101,7 @@
                     <MudText Class="mt-6 hellovalentica" Color="Color.Primary" Align="Align.Center" Typo="Typo.h3">tus datos</MudText>
                 </AnimateOnScroll>
                 <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                    <FormAsistencia></FormAsistencia>
+                    <FormAsistencia Id="tusDatosForm"></FormAsistencia>
                 </AnimateOnScroll>
             }
             else if (IsAttendanceConfirmed && SelectedOptionAcompañante == "Option2")
@@ -110,13 +110,13 @@
                     <MudText Class="mt-6 quicksandBold" Color="Color.Primary" Align="Align.Center" Typo="Typo.h5">tus datos</MudText>
                 </AnimateOnScroll>
                 <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                    <FormAsistencia></FormAsistencia>
+                    <FormAsistencia Id="tusDatosForm"></FormAsistencia>
                 </AnimateOnScroll>
                 <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
                     <MudText Class="mt-6 quicksandBold" Color="Color.Primary" Align="Align.Center" Typo="Typo.h5">datos acompañante</MudText>
                 </AnimateOnScroll>
                 <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                    <FormAsistencia></FormAsistencia>
+                    <FormAsistencia Id="tusDatosForm"></FormAsistencia>
                 </AnimateOnScroll>
             }
 
@@ -441,12 +441,18 @@
     {
         if (firstRender)
         {
-            await ScrollToElement();
+            await ScrollToElement("confirmationButton", 2000);
         }
 
         if (!firstRender && IsAttendanceConfirmed)
         {
             ScrollToBottom();
+        }
+
+        if (!firstRender && SelectedOptionAcompañante != null)
+        {
+            await ScrollToElement("tusDatosForm", 2000);
+
         }
     }
 
@@ -460,9 +466,9 @@
         await JSRuntime.ScrollByPixels();
     }
 
-    private async Task ScrollToElement()
+    private async Task ScrollToElement(string elementToScrollId, int scrollDuration)
     {
-        await JSRuntime.InvokeVoidAsync("scrollToElement", "targetElement", "2000");
+        await JSRuntime.InvokeVoidAsync("scrollToElement", elementToScrollId, scrollDuration);
     }
 
 
