--- a/Pages/Asistencia.razor
+++ b/Pages/Asistencia.razor
@@ -1,477 +1,10 @@
 ﻿@page "/asistencia"
-@inject IJSRuntime JSRuntime
-<link rel="stylesheet" href="/css/custom-fonts.css" />
 
+<PageTitle>Boda MIsabel & Nacho</PageTitle>
 
 @using Boda_BlazorWASM_PowerAutomate.Components;
 @using Boda_BlazorWASM_PowerAutomate.Models;
 @using System.ComponentModel.DataAnnotations
 
-<PageTitle>Boda MIsabel & Nacho</PageTitle>
-
-<MudGrid>
-      <MudItem xs="12">
-        <MudContainer Class="mt-4 container text-overlay flex-column align-center justify-center mud-width-full">
-            <img src="/images/rama4.svg" alt="Vector Image" class="rama5 rama6">
-            <img src="/images/rama4.svg" alt="Vector Image" class="rama5">
-        </MudContainer>
-    </MudItem>
-
-    <MudItem xs="12">
-        <MudContainer Class="mt-8 flex-column align-center justify-center mud-width-full">
-            <div class="container">
-                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(2)">
-                    <div class="vertical-line longline"></div>
-                </AnimateOnScroll>
-            </div>
-        </MudContainer>
-    </MudItem>
-
-    <MudItem xs="12">
-        <MudContainer Class="flex-column align-center justify-center mud-width-full">
-            <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(0.6)">
-                <MudText Class="mt-7 dayroman" Align="Align.Center" Color="Color.Primary" Typo="Typo.h4">¿Nos confirmas tu asistencia?</MudText>
-            </AnimateOnScroll>
-        </MudContainer>
-
-        <div id="confirmationButton" class="d-flex align-center justify-center mt-5 mb-5">
-            <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(0.6)">
-                <MudButton OnClick="ConfirmAttendance" StartIcon="@Icons.Material.Filled.RocketLaunch" EndIcon="@Icons.Material.Filled.RocketLaunch" Variant="Variant.Filled" Size="Size.Large" Color="Color.Secondary">CONFIRMO</MudButton>
-            </AnimateOnScroll>
-        </div>
-    </MudItem>
-
-    <MudItem xs="12">
-        <MudContainer Class="mt-4 container text-overlay flex-column align-center justify-center mud-width-full">
-            <img src="/images/rama4.svg" alt="Vector Image" class="rama5 rama6">
-            <img src="/images/rama4.svg" alt="Vector Image" class="rama5">
-        </MudContainer>
-    </MudItem>
-
-    <MudItem xs="12">
-        <MudContainer Class="flex-column align-center justify-center mud-width-full">
-            <div class="container">
-                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)">
-                    <div class="vertical-line longline"></div>
-                </AnimateOnScroll>
-            </div>
-        </MudContainer>
-    </MudItem>
-
-
-    @if (IsAttendanceConfirmed)
-    {
-
-        <MudItem Class="mt-2" xs="12">
-            <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                <MudText Class="mt-6 adelia" Color="Color.Secondary" Align="Align.Center" Typo="Typo.h2">@genial</MudText>
-            </AnimateOnScroll>
-
-            <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                <MudText id="danosDatos" Class="mt-10 dayroman" Color="Color.Primary" Align="Align.Center" Typo="Typo.h4">Danos algunos datos para confirmar tu asistencia</MudText>
-            </AnimateOnScroll>
-
-            <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                <MudRadioGroup Class="mt-6" T="string" @bind-SelectedOption="@SelectedOptionAcompañante" Required="true" RequiredError="Por favor di si vienes sola/o o con pareja!">
-                    <MudRadio Class="quicksandBold align-center justify-center mud-width-full" Option="@("Option1")">Voy SIN acompañante</MudRadio>
-                    <MudRadio Class="quicksandBold align-center justify-center mud-width-full" Option="@("Option2")">Voy CON acompañante</MudRadio>
-                </MudRadioGroup>
-            </AnimateOnScroll>
-
-            <MudItem xs="12">
-                <MudContainer Class="mt-8 flex-column align-center justify-center mud-width-full">
-                    <div class="container">
-                        <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(0.5)">
-                            <div class="vertical-line"></div>
-                        </AnimateOnScroll>
-                    </div>
-                </MudContainer>
-            </MudItem>
-
-            <MudItem xs="12">
-                <MudContainer Class="mt-4 container text-overlay flex-column align-center justify-center mud-width-full">
-                    <img src="/images/rama3.svg" alt="Vector Image" class="rama7">
-                    <img src="/images/rama3.svg" alt="Vector Image" class="rama7 rama8">
-                </MudContainer>
-            </MudItem>
-
-            @if (IsAttendanceConfirmed && SelectedOptionAcompañante == "Option1")
-            {
-                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                    <MudText Class="mt-6 hellovalentica" Color="Color.Primary" Align="Align.Center" Typo="Typo.h3">tus datos</MudText>
-                </AnimateOnScroll>
-                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                    <FormAsistencia Id="tusDatosForm"></FormAsistencia>
-                </AnimateOnScroll>
-            }
-            else if (IsAttendanceConfirmed && SelectedOptionAcompañante == "Option2")
-            {
-                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                    <MudText Class="mt-6 quicksandBold" Color="Color.Primary" Align="Align.Center" Typo="Typo.h5">tus datos</MudText>
-                </AnimateOnScroll>
-                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                    <FormAsistencia Id="tusDatosForm"></FormAsistencia>
-                </AnimateOnScroll>
-                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                    <MudText Class="mt-6 quicksandBold" Color="Color.Primary" Align="Align.Center" Typo="Typo.h5">datos acompañante</MudText>
-                </AnimateOnScroll>
-                <AnimateOnScroll Animation="Animations.SlideInUp" AnimationDuration="TimeSpan.FromSeconds(1)" AnimationDelay="TimeSpan.FromSeconds(1)">
-                    <FormAsistencia Id="tusDatosForm"></FormAsistencia>
-                </AnimateOnScroll>
-            }
-
-
-        </MudItem>
-    }
-</MudGrid>
-
-
-
-
-<style>
-    :root {
-        --primary-color: #BFD09A; /* Define your primary color */
-        --secondary-color: #B3CEC3; /* Define your secondary color */
-        --tertiary-color: #808285;
-        --primary-light: #DFEAC1;
-    }
-    /* Custom CSS to override MudBlazor MudContainer padding */
-    .mud-container {
-        padding: 0 !important;
-    }
-
-    body {
-        overflow-x: hidden;
-    }
-
-    .mud-grid-spacing-xs-3 {
-        width: 100vw !important;
-        margin: 0px !important;
-    }
-
-    .flex-container {
-        width: 100vw;
-        height: 80vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-    }
-
-    .marco1 {
-        /* background-color: var(--color1); */
-        /* background-image: url('images/fotoMaizal2.jpg');  */
-        width: 100vw;
-        height: 80vh;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        gap: 0px;
-        /* background-color: #BFD09A; */
-    }
-
-        .marco1::before {
-            content: "";
-            background-color: rgba(191, 208, 154, 0.1); /* Adjust the opacity as needed */
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            margin: 3rem;
-            border: 2px solid #BFD09A;
-        }
-
-        .marco1 h1,
-        .marco1 h2,
-        .marco1 h5 {
-            text-align: center;
-        }
-
-
-    .text-overlay {
-        position: absolute;
-        top: 30%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-        z-index: 1;
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-        align-items: center;
-        margin-top: 4.5rem;
-    }
-
-
-    .foto2 {
-        /* background-color: var(--color1); */
-        /* background-image: url('images/fotoSantiago2.jpg'); */
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .vertical-line {
-        margin-top: 0px;
-        border-left: 2px solid; /* Adjust thickness and color as needed */
-        color: #BFD09A;
-        height: 100px; /* Adjust height as needed */
-    }
-
-    .longline {
-        height: 300px;
-    }
-
-    .container {
-        position: relative;
-        /* Add other styles for your content container if needed */
-    }
-
-    .hojas {
-        position: absolute;
-        top: 0; /* Adjust this value to control the distance from the top */
-        left: -2%; /* Adjust this value to control the distance from the left */
-        /* You can also use right: 0; for sticking to the right side */
-        width: 60px; /* Adjust the width as needed */
-        height: auto; /* Maintain the aspect ratio */
-        /* You can also use max-width or max-height to set limits *
-                /* Add other styles for your image if needed */
-        margin-top: -30px;
-        z-index: 2;
-        opacity: 0.7;
-    }
-
-    .hojas2 {
-        position: absolute;
-        top: 0; /* Adjust this value to control the distance from the top */
-        right: -4%; /* Adjust this value to control the distance from the left */
-        /* You can also use right: 0; for sticking to the right side */
-        width: 80px; /* Adjust the width as needed */
-        height: auto; /* Maintain the aspect ratio */
-        /* You can also use max-width or max-height to set limits *
-                    /* Add other styles for your image if needed */
-        margin-top: -70px;
-        z-index: 2;
-        transform: scaleX(-1);
-        opacity: 0.7;
-    }
-
-    .rama1 {
-        position: absolute;
-        top: 0; /* Adjust this value to control the distance from the top */
-        right: 0; /* Adjust this value to control the distance from the left */
-        /* You can also use right: 0; for sticking to the right side */
-        width: 270px; /* Adjust the width as needed */
-        height: auto; /* Maintain the aspect ratio */
-        /* You can also use max-width or max-height to set limits *
-                    /* Add other styles for your image if needed */
-        margin-top: -50px;
-        z-index: 2;
-        opacity: 0.7;
-    }
-
-    .rama2 {
-        position: absolute;
-        top: 0; /* Adjust this value to control the distance from the top */
-        left: -4%; /* Adjust this value to control the distance from the left */
-        /* You can also use right: 0; for sticking to the right side */
-        width: 270px; /* Adjust the width as needed */
-        height: auto; /* Maintain the aspect ratio */
-        /* You can also use max-width or max-height to set limits *
-                        /* Add other styles for your image if needed */
-        margin-top: -70px;
-        z-index: 2;
-        opacity: 0.7;
-    }
-
-    .rama3 {
-        position: absolute;
-        top: 0; /* Adjust this value to control the distance from the top */
-        right: -8%; /* Adjust this value to control the distance from the left */
-        /* You can also use right: 0; for sticking to the right side */
-        width: 350px; /* Adjust the width as needed */
-        height: auto; /* Maintain the aspect ratio */
-        /* You can also use max-width or max-height to set limits *
-                        /* Add other styles for your image if needed */
-        margin-top: -60px;
-        z-index: 2;
-        opacity: 0.7;
-    }
-
-    .rama4 {
-        position: absolute;
-        top: 0; /* Adjust this value to control the distance from the top */
-        left: -5%;
-        height: 350px;
-        width: auto; /* Maintain the aspect ratio */
-        /* You can also use max-width or max-height to set limits *
-                            /* Add other styles for your image if needed */
-        margin-top: -170px;
-        z-index: 2;
-        opacity: 0.7;
-    }
-
-    .rama5 {
-        position: absolute;
-        top: 0; /* Adjust this value to control the distance from the top */
-        right: -5%;
-        height: 350px;
-        width: auto; /* Maintain the aspect ratio */
-        /* You can also use max-width or max-height to set limits *
-                                /* Add other styles for your image if needed */
-        margin-top: 0px;
-        z-index: 2;
-        transform: scaleX(-1);
-        opacity: 0.7;
-    }
-
-    .rama6 {
-        left: -5%;
-        transform: scaleX(1);
-    }
-
-    .rama7 {
-        position: absolute;
-        top: 0; /* Adjust this value to control the distance from the top */
-        right: -20%;
-        /* You can also use right: 0; for sticking to the right side */
-        width: 250px; /* Adjust the width as needed */
-        height: auto; /* Maintain the aspect ratio */
-        /* You can also use max-width or max-height to set limits *
-                        /* Add other styles for your image if needed */
-        margin-top: -150px;
-        z-index: 2;
-        opacity: 0.7;
-    }
-
-    .rama8 {
-        left: -20%;
-        transform: scaleX(-1);
-    }
-
-    .bacalisties {
-        font-size: 3.5rem;
-        font-weight: 200;
-        color: var(--primary-color);
-        margin-bottom: 1vh;
-        margin-top: 1vh;
-    }
-
-    .quicksandBook {
-        font-size: 1.3rem;
-        font-weight: 400;
-        color: var(--secondary-color); /* Secondary color */
-    }
-
-    .nosCasamos {
-        margin-bottom: 0.3rem;
-    }
-
-    .fecha {
-        font-weight: 400;
-        color: var(--secondary-color);
-        font-size: 1.2rem;
-    }
-
-    .greenContainer {
-        background-color: var(--primary-light);
-    }
-
-    .foto {
-        width: 80vw;
-        opacity: 0.5;
-        border: 2px solid #ffff;
-    }
-
-    .mud-radio-content {
-        font-family: Quicksand Book;
-        color: var(--primary-color);
-    }
-
-</style>
-
-@code {
-    bool success;
-    string[] errors = { };
-    MudTextField<string> pwField1;
-    MudForm form;
-
-    public bool IsAttendanceConfirmed { get; set; } = false;
-    public string SelectedOptionAcompañante { get; set; }
-
-    MudDatePicker _picker;
-    DateTime? date;
-    DateTime weddingDate = new System.DateTime(2024, 04, 20);
-
-    private void ConfirmAttendance()
-    {
-        IsAttendanceConfirmed = true;
-
-    }
-
-    private string genial;
-
-
-    protected override async Task OnInitializedAsync()
-    {
-        // Get the user's preferred language from the browser
-        var userLanguage = System.Globalization.CultureInfo.CurrentCulture.Name;
-
-        genial = userLanguage.StartsWith("es") ? "¡Genial!" : "Great!";
-
-
-    }
-
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
-        {
-            await ScrollToElement("confirmationButton", 2000);
-        }
-
-        if (!firstRender && IsAttendanceConfirmed)
-        {
-            await ScrollToElement("danosDatos", 2000);
-        }
-
-        if (!firstRender && SelectedOptionAcompañante != null)
-        {
-            await ScrollToElement("tusDatosForm", 2000);
-
-        }
-    }
-
-    private async Task ScrollToBottom()
-    {
-        await JSRuntime.ScrollToBottom();
-    }
-
-    private async Task ScrollByPixels()
-    {
-        await JSRuntime.ScrollByPixels();
-    }
-
-    private async Task ScrollToElement(string elementToScrollId, int scrollDuration)
-    {
-        await JSRuntime.InvokeVoidAsync("scrollToElement", elementToScrollId, scrollDuration);
-    }
-
-
-
-}
+<FormAsistencia2 IsStartScrollWanted="true"></FormAsistencia2>
 
