added phone numbers in buttons

--- a/Pages/Contacto.razor
+++ b/Pages/Contacto.razor
@@ -41,10 +41,10 @@
     <MudTextField Class="pa-6" @bind-Value="TelefonoNacho" InputType="@InputType.Telephone" Label="Teléfono Nacho" Variant="Variant.Text" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Phone" AdornmentColor="Color.Primary" /> *@
    
     <MudList Clickable="true">
-        <MudListItem href="tel:+34 691715617" data-rel="external" Text="Llamar a M. Isabel" Icon="@Icons.Material.Filled.Phone" IconColor="Color.Primary" />
+        <MudListItem href="tel:+34 691715617" data-rel="external" Text="Llamar a M. Isabel (+34 691715617)" Icon="@Icons.Material.Filled.Phone" IconColor="Color.Primary" />
         <MudDivider />
 
-        <MudListItem href="tel:+34 618159730" data-rel="external" Text="Llamar a Nacho" Icon="@Icons.Material.Filled.Phone" IconColor="Color.Primary" />
+        <MudListItem href="tel:+34 618159730" data-rel="external" Text="Llamar a Nacho (+34 618159730)" Icon="@Icons.Material.Filled.Phone" IconColor="Color.Primary" />
 
     </MudList>
 
