--- a/Pages/Autobuses.razor
+++ b/Pages/Autobuses.razor
@@ -18,6 +18,8 @@
 <MudGrid Class="mt-n4">
     <MudItem Class="mt-2" xs="12">
         <FormBuses></FormBuses>
+@*         <MudText Typo="Typo.body2" Class="dayroman" Color="Color.Primary">Por confirmar...</MudText>
+ *@
     </MudItem>
 </MudGrid>
 
