--- a/Pages/Turismo.razor
+++ b/Pages/Turismo.razor
@@ -9,12 +9,12 @@
 <MudText Class="mt-7 mb-7 butterfly" Align="Align.Center" Color="Color.Primary" Typo="Typo.h3">Turismo</MudText>
 
 <MudGrid Spacing="4" Justify="Justify.Center">
-    <MudItem >
+    <MudItem Class="ma-6">
         <MudCard Class="custom-card" Elevation="6">
             <MudCardMedia Image="images/castillo.jpg" Height="200" />
             <MudCardContent>
-                <MudText Typo="Typo.h5">Castillo de Medellín</MudText>
-                <MudText Typo="Typo.body2">Fortaleza del siglo XIII, ubicado en un elevado cerro en la margen izquierda del río Guadiana</MudText>
+                <MudText Typo="Typo.h5" Class="quicksandBook mb-3" Color="Color.Primary">Castillo de Medellín</MudText>
+                <MudText Typo="Typo.body2" Class="dayroman" Color="Color.Primary">Fortaleza del siglo XIII, ubicado en un elevado cerro en la margen izquierda del río Guadiana</MudText>
             </MudCardContent>
             <MudCardActions>
                 <MudButton Href="https://maps.app.goo.gl/M1xCuJMB41RwhZ798"
@@ -23,12 +23,12 @@
         </MudCard>
     </MudItem>
 
-    <MudItem>
+    <MudItem Class="ma-6">
         <MudCard Class="custom-card" Elevation="6">
             <MudCardMedia Image="images/teatro.jpg" Height="200" />
             <MudCardContent>
-                <MudText Typo="Typo.h5">Teatro romano de Medellín</MudText>
-                <MudText Typo="Typo.body2">Es el más importante edificio visible del Metellinum romano, situado en la ladera meridional del cerro.</MudText>
+                <MudText Typo="Typo.h5" Class="quicksandBook mb-3" Color="Color.Primary">Teatro romano de Medellín</MudText>
+                <MudText Typo="Typo.body2" Class="dayroman" Color="Color.Primary">Es el más importante edificio visible del Metellinum romano, situado en la ladera meridional del cerro.</MudText>
             </MudCardContent>
             <MudCardActions>
                 <MudButton Href="https://maps.app.goo.gl/uVBc7C3VMEp1yRq29"
@@ -37,12 +37,12 @@
         </MudCard>
     </MudItem>
 
-    <MudItem>
+    <MudItem Class="ma-6">
         <MudCard Class="custom-card" Elevation="6">
             <MudCardMedia Image="images/iglesia.jpg" Height="200" />
             <MudCardContent>
-                <MudText Typo="Typo.h5">Centro Museográfico</MudText>
-                <MudText Typo="Typo.body2">Iglesia restaurada para darle utilidad como centro de interpretación del Parque Arqueológico de Medellín.</MudText>
+                <MudText Typo="Typo.h5" Class="quicksandBook mb-3" Color="Color.Primary">Centro Museográfico</MudText>
+                <MudText Typo="Typo.body2" Class="dayroman" Color="Color.Primary">Iglesia restaurada para darle utilidad como centro de interpretación del Parque Arqueológico de Medellín.</MudText>
             </MudCardContent>
             <MudCardActions>
                 <MudButton Href="https://maps.app.goo.gl/uhXySwmfu8kLm3iA6"
@@ -51,12 +51,12 @@
         </MudCard>
     </MudItem>
 
-    <MudItem>
+    <MudItem Class="ma-6">
         <MudCard Class="custom-card" Elevation="6">
             <MudCardMedia Image="images/magacela.jpg" Height="200" />
             <MudCardContent>
-                <MudText Typo="Typo.h5">Castillo de Magacela</MudText>
-                <MudText Typo="Typo.body2">Levantado en la cima alargada de una escarpada colina pétrea que emerge aislada en las llanuras de La Serena</MudText>
+                <MudText Typo="Typo.h5" Class="quicksandBook mb-3" Color="Color.Primary">Castillo de Magacela</MudText>
+                <MudText Typo="Typo.body2" Class="dayroman" Color="Color.Primary">Levantado en la cima alargada de una escarpada colina pétrea que emerge aislada en las llanuras de La Serena</MudText>
             </MudCardContent>
             <MudCardActions>
                 <MudButton Href="https://maps.app.goo.gl/KYMh3e32Fj1URCLh9"
