--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,10 +1,10 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home" IconColor="Color.Primary">Inicio</MudNavLink>
+    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home" IconColor="Color.Primary">Inicio</MudNavLink>
     <MudNavLink Href="/horarios" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AccessTime" IconColor="Color.Primary">Horarios</MudNavLink>
     <MudNavLink Href="/asistencia" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add" IconColor="Color.Primary">Confirmar asistencia</MudNavLink>
     <MudNavLink Href="/autobuses" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.DirectionsBus" IconColor="Color.Primary">Confirmar autobuses</MudNavLink>
     <MudNavLink Href="/alojamientos" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Hotel" IconColor="Color.Primary">Alojamientos</MudNavLink>
-    <MudNavLink Href="/regalo" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Email" IconColor="Color.Primary">Regalo</MudNavLink>
-    <MudNavLink Href="/turismo" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Castle" IconColor="Color.Primary">Turismo</MudNavLink>
+@*     <MudNavLink Href="/regalo" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Email" IconColor="Color.Primary">Regalo</MudNavLink>
+ *@    <MudNavLink Href="/turismo" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Castle" IconColor="Color.Primary">Turismo</MudNavLink>
     <MudNavLink Href="/contacto" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Phone" IconColor="Color.Primary">Contacto</MudNavLink>
 </MudNavMenu>
