added sections in landing page, changed mudthem

--- a/Components/FormAsistencia.razor
+++ b/Components/FormAsistencia.razor
@@ -1,5 +1,5 @@
-﻿@using Boda_BlazorWASM_PowerAutomate.Models;
-@using Boda_BlazorWASM_PowerAutomate.Components;
+﻿@using teseractal_web.Models;
+@using teseractal_web.Components;
 @using System.ComponentModel.DataAnnotations
 
 
