--- a/Pages/Asistencia.razor
+++ b/Pages/Asistencia.razor
@@ -1,9 +1,9 @@
 ﻿@page "/asistencia"
 
-<PageTitle>Boda MIsabel & Nacho</PageTitle>
+<PageTitle>teseractal</PageTitle>
 
-@using Boda_BlazorWASM_PowerAutomate.Components;
-@using Boda_BlazorWASM_PowerAutomate.Models;
+@using teseractal_web.Components;
+@using teseractal_web.Models;
 @using System.ComponentModel.DataAnnotations
 
 <FormAsistencia2 IsStartScrollWanted="true"></FormAsistencia2>
