--- a/Pages/Contacto.razor
+++ b/Pages/Contacto.razor
@@ -4,8 +4,8 @@
 @inject IJSRuntime JSRuntime
 
 
-@using Boda_BlazorWASM_PowerAutomate.Components;
-@using Boda_BlazorWASM_PowerAutomate.Models;
+@using teseractal_web.Components;
+@using teseractal_web.Models;
 @using System.ComponentModel.DataAnnotations
 
 <MudText Class="mt-7 butterfly" Align="Align.Center" Color="Color.Primary" Typo="Typo.h3">Contacto</MudText>
