--- a/Components/FormBuses.razor
+++ b/Components/FormBuses.razor
@@ -1,5 +1,5 @@
-﻿@using Boda_BlazorWASM_PowerAutomate.Models;
-@using Boda_BlazorWASM_PowerAutomate.Components;
+﻿@using teseractal_web.Models;
+@using teseractal_web.Components;
 @using System.ComponentModel.DataAnnotations
 
 
