--- a/Pages/Turismo.razor
+++ b/Pages/Turismo.razor
@@ -2,8 +2,8 @@
 <link rel="stylesheet" href="/css/custom-fonts.css" />
 
 
-@using Boda_BlazorWASM_PowerAutomate.Components;
-@using Boda_BlazorWASM_PowerAutomate.Models;
+@using teseractal_web.Components;
+@using teseractal_web.Models;
 @using System.ComponentModel.DataAnnotations
 
 <MudText Class="mt-7 mb-7 butterfly" Align="Align.Center" Color="Color.Primary" Typo="Typo.h3">Turismo</MudText>
