--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,8 +7,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using MudBlazor
-@using Boda_BlazorWASM_PowerAutomate
-@using Boda_BlazorWASM_PowerAutomate.Shared
+@using teseractal_web
+@using teseractal_web.Shared
 
 @using Blazor.AnimateOnScroll
 @using BlazorAnimation
