--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,10 +1,10 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home" IconColor="Color.Primary">inicio</MudNavLink>
-    <MudNavLink Href="/horarios" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.House" IconColor="Color.Primary">construcción digital</MudNavLink>
-    <MudNavLink Href="/asistencia" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.House" IconColor="Color.Primary">infografía arquitectónica</MudNavLink>
-    <MudNavLink Href="/autobuses" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.House" IconColor="Color.Primary">infografía obra civil</MudNavLink>
-    <MudNavLink Href="/alojamientos" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.House" IconColor="Color.Primary">automatización de procesos</MudNavLink>
+    <MudNavLink Href="/construcciondigital" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Apartment" IconColor="Color.Primary">construcción digital</MudNavLink>
+    <MudNavLink Href="/enconstruccion" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.House" IconColor="Color.Primary">infografía arquitectónica</MudNavLink>
+    <MudNavLink Href="/enconstruccion" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Train" IconColor="Color.Primary">infografía obra civil</MudNavLink>
+    <MudNavLink Href="/enconstruccion" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AutoAwesomeMotion" IconColor="Color.Primary">automatización de procesos</MudNavLink>
  
-    <MudNavLink Href="/nosotros" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Person" IconColor="Color.Primary">Sobre nosotros</MudNavLink>
-    <MudNavLink Href="/contacto" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Phone" IconColor="Color.Primary">Contacto</MudNavLink>
+    <MudNavLink Href="/enconstruccion" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Person" IconColor="Color.Primary">Sobre nosotros</MudNavLink>
+    <MudNavLink Href="/enconstruccion" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Phone" IconColor="Color.Primary">Contacto</MudNavLink>
 </MudNavMenu>
